--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -27,6 +27,10 @@ h4 {
 .active {
     color: #FFFFFF !important;
 }
+.modal-header {
+    background-color: #2e4a70;
+    color: #FFFFFF;
+}
 @media screen and (max-width: 600px) {
     .punishment {
         display: block;
